--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-notifications-component": "^2.4.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-notifications-component": "^2.4.1",
